Fix font fallback issue on mobile

--- a/src/assets/custom-preflight.css
+++ b/src/assets/custom-preflight.css
@@ -67,7 +67,7 @@
   }
 
   .font-aeonik-fono {
-    font-family: 'Aeonik Fono', sans-serif;
+    font-family: 'Aeonik-Fono', sans-serif;
   }
 
   /* Fluid Typography Scale */
