--- a/src/assets/fonts.css
+++ b/src/assets/fonts.css
@@ -18,18 +18,36 @@
   font-display: swap;
 }
 
+/* Fix the font-family name to be consistent with CSS references */
 @font-face {
   font-family: 'Aeonik-Fono';
   src: url('./aeonik-fono/AeonikFono-Regular.otf') format('opentype');
   font-weight: 400;
   font-style: normal;
-  font-display: swap;
+  font-display: block; /* Change to block to ensure it renders before fallback */
 }
 
 @font-face {
   font-family: 'Aeonik-Fono';
   src: url('./aeonik-fono/AeonikFono-Medium.otf') format('opentype');
   font-weight: 500;
+  font-style: normal;
+  font-display: block; /* Change to block to ensure it renders before fallback */
+}
+
+/* Add additional weights for Aeonik */
+@font-face {
+  font-family: 'Aeonik';
+  src: url('./aeonik/Aeonik-Medium.woff2') format('woff2');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Aeonik';
+  src: url('./aeonik/Aeonik-Bold.woff2') format('woff2');
+  font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
